# Landmark-Recognition

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp  SpatialForest.h  Spatialtree.cpp  Spatialtree.h  Spatialtree_Vectorization.cpp
